--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="action_settings">Settings</string>
     <string name="app_close">Close</string>
     <string name="action_shuffle">Shuffle</string>
+    <string name="channel_name">music</string>
+    <string name="channel_description">Music Player</string>
 </resources>
